10-configmaps/magicmirror-premium-scaffold/magicmirror-premium-scaffold-v2/04-service-magicmirror-hostport.yaml
apiVersion: v1
kind: Service
metadata:
  name: magicmirror-hostport
  namespace: suite
spec:
  type: ClusterIP
  selector:
    app: magicmirror-app
  ports:
  - name: ui
    port: 8080
    targetPort: http
