10-configmaps/magicmirror-premium-scaffold/magicmirror-premium-scaffold-v2/05-ingress-mirror.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirror-ingress
  namespace: suite
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "mirror.suite.home.arpa" ]
      secretName: suite-home-arpa-tls
  rules:
    - host: mirror.suite.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magicmirror-hostport
                port:
                  number: 8080
